# project-2-restaraunt-analytics

./: .env  .gitignore  README.md  app.py  docker-compose.yml  eda.ipynb  format.py  pyproject.toml  scratch.ipynb
config/: config.yaml
data/: Data_Dictionary_-_Open_Restaurants_Inspections.xlsx  Open_Restaurant_Applications_Historical_Data_Dictionary.xlsx
data/formatted/: init.sql
data/raw/: 2_OpenRestaurantInspectionsReference.xlsx  3_RestaurantInspectionsReference.xlsx  edits.yaml
data/test/: 1000_OpenRestaurantInspections.csv  100_OpenRestaurantInspections.csv
notebooks/: scratch.ipynb
